--- a/_config.yml
+++ b/_config.yml
@@ -444,6 +444,85 @@ issues:
     - WebTechnologies
     - NumericalMathematics
     landing: '2017'
+  - slug: RJ-2017-044
+    title: 'fourierin: An R package to compute Fourier integrals'
+    bibtitle: 'fourierin: An R package to compute Fourier integrals'
+    author:
+    - Guillermo Basulto-Elias
+    - Alicia Carriquiry
+    - Kris De Brabanter
+    - Daniel J. Nordman
+    bibauthor: |-
+      Guillermo Basulto-Elias and Alicia Carriquiry and Kris De
+                Brabanter and Daniel J. Nordman
+    abstract: '  Abstract We present the R package fourierin (Basulto-Elias, 2017)
+      for evaluating functions defined as            Fourier-type integrals over a
+      collection of argument values. The integrals are finitely supported with            integrands
+      involving continuous functions of one or two variables. As an important application,
+      such            Fourier integrals arise in so-called “inversion formulas”, where
+      one seeks to evaluate a probability            density at a series of points
+      from a given characteristic function (or vice versa) through Fourier            transforms.
+      This paper intends to fill a gap in current R software, where tools for repeated
+      evaluation            of functions as Fourier integrals are not directly available.
+      We implement two approaches for such            computations with numerical
+      integration. In particular, if the argument collection for evaluation            corresponds
+      to a regular grid, then an algorithm from Inverarity (2002) may be employed
+      based            on a Fast Fourier Transform, which creates significant improvements
+      in the speed over a second            approach to numerical Fourier integration
+      (where the latter also applies to cases where the points for            evaluation
+      are not on a grid). We illustrate the package with the computation of probability
+      densities            and characteristic functions through Fourier integrals/transforms,
+      for both univariate and bivariate            examples.'
+    acknowledged: '2016-11-16'
+    online: '2017-10-12'
+    CRANpkgs:
+    - fourierin
+    - RcppArmadillo
+    CTV_rev: NumericalMathematics
+    landing: '2017'
+  - slug: RJ-2017-045
+    title: 'afmToolkit: an R Package for Automated AFM Force-Distance Curves Analysis'
+    bibtitle: |-
+      afmToolkit: an R Package for Automated AFM Force-Distance
+                Curves Analysis
+    author:
+    - Rafael Benítez
+    - Vicente J. Bolós
+    - José-Luis Toca-Herrera
+    bibauthor: |-
+      Rafael Benítez and Vicente J. Bolós and José-Luis Toca-
+                Herrera
+    abstract: '  Abstract Atomic force microscopy (AFM) is widely used to measure
+      molecular and colloidal inter           actions as well as mechanical properties
+      of biomaterials. In this paper the afmToolkit R package is            introduced.
+      This package allows the user to automatically batch process AFM force-distance
+      and            force-time curves. afmToolkit capabilities range from importing
+      ASCII files and preprocessing the            curves (contact point detection,
+      baseline correction. . . ) for finding relevant physical information,            such
+      as Young’s modulus, adhesion energies and exponential decay for force relaxation
+      and creep            experiments. This package also contains plotting, summary
+      and feature extraction functions. The            package also comes with several
+      data sets so the user can test the aforementioned features with ease.            The
+      package afmToolkit eases the basic processing of large amount of AFM F-d/t curves
+      at once. It            is also flexible enough to easily incorporate new functions
+      as they are needed and can be seen as a            programming infrastructure
+      for further algorithm development.'
+    acknowledged: '2017-04-07'
+    online: '2017-10-12'
+    CRANpkgs:
+    - afmToolkit
+    - devtools
+    - ggplot2
+    - minpack.lm
+    - gridExtra
+    - scales
+    - dplyr
+    CTV_rev:
+    - ChemPhys
+    - Graphics
+    - Optimization
+    - Phylogenetics
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
