--- a/_config.yml
+++ b/_config.yml
@@ -523,6 +523,216 @@ issues:
     - Optimization
     - Phylogenetics
     landing: '2017'
+  - slug: RJ-2017-046
+    title: Visualization of Regression Models Using visreg
+    bibtitle: Visualization of Regression Models Using visreg
+    author:
+    - Patrick Breheny
+    - Woodrow Burchett
+    bibauthor: Patrick Breheny and Woodrow Burchett
+    abstract: '  Abstract Regression models allow one to isolate the relationship
+      between the outcome and an ex           planatory variable while the other variables
+      are held constant. Here, we introduce an R package,            visreg, for the
+      convenient visualization of this relationship via short, simple function calls.
+      In addition            to estimates of this relationship, the package also provides
+      pointwise confidence bands and partial            residuals to allow assessment
+      of variability as well as outliers and other deviations from modeling            assumptions.
+      The package provides several options for visualizing models with interactions,
+      including            lattice plots, contour plots, and both static and interactive
+      perspective plots. The implementation of            the package is designed
+      to be fully object-oriented and interface seamlessly with R’s rich collection
+      of            model classes, allowing a consistent interface for visualizing
+      not only linear models, but generalized            linear models, proportional
+      hazards models, generalized additive models, robust regression models,            and
+      many more.'
+    acknowledged: '2016-09-12'
+    online: '2017-10-24'
+    CRANpkgs:
+    - visreg
+    - rms
+    - rockchalk
+    - car
+    - effects
+    - plotmo
+    - lattice
+    - ggplot2
+    - splines
+    - rgl
+    - MASS
+    - mgcv
+    - locfit
+    - randomForest
+    - e1071
+    - gbm
+    - lme4
+    CTV_rev:
+    - SocialSciences
+    - Econometrics
+    - Environmetrics
+    - MachineLearning
+    - Multivariate
+    - Graphics
+    - Psychometrics
+    - Survival
+    - Bayesian
+    - Distributions
+    - SpatioTemporal
+    - Cluster
+    - Finance
+    - NumericalMathematics
+    - OfficialStatistics
+    - Phylogenetics
+    - ReproducibleResearch
+    - Robust
+    landing: '2017'
+  - slug: RJ-2017-047
+    title: 'arulesViz: Interactive Visualization of Association Rules with R'
+    bibtitle: |-
+      arulesViz: Interactive Visualization of Association Rules
+                with R
+    author: Michael Hahsler
+    bibauthor: Michael Hahsler
+    abstract: '  Abstract Association rule mining is a popular data mining method
+      to discover interesting relation           ships between variables in large
+      databases. An extensive toolbox is available in the R-extension            package
+      arules. However, mining association rules often results in a vast number of
+      found rules,            leaving the analyst with the task to go through a large
+      set of rules to identify interesting ones. Sifting            manually through
+      extensive sets of rules is time-consuming and strenuous. Visualization and espe           cially
+      interactive visualization has a long history of making large amounts of data
+      better accessible.            The R-extension package arulesViz provides most
+      popular visualization techniques for association            rules. In this paper,
+      we discuss recently added interactive visualizations to explore association
+      rules            and demonstrate how easily they can be used in arulesViz via
+      a unified interface. With examples, we            help to guide the user in
+      selecting appropriate visualizations and interpreting the results.'
+    acknowledged: '2016-12-23'
+    online: '2017-10-24'
+    CRANpkgs:
+    - arulesViz
+    - arules
+    - DT
+    - plotly
+    - grid
+    - visNetwork
+    CTV_rev:
+    - MachineLearning
+    - ReproducibleResearch
+    landing: '2017'
+  - slug: RJ-2017-048
+    title: 'liureg: A Comprehensive R Package for the Liu Estimation of Linear Regression
+      Model with Collinear Regressors'
+    bibtitle: |-
+      liureg: A Comprehensive R Package for the Liu Estimation of
+                Linear Regression Model with Collinear Regressors
+    author:
+    - Muhammad Imdadullah
+    - Muhammad Aslam
+    - Saima Altaf
+    bibauthor: Muhammad Imdadullah and Muhammad Aslam and Saima Altaf
+    abstract: '  Abstract The Liu regression estimator is now a commonly used alternative
+      to avoid the adverse            effects of the conventional ordinary least squares
+      estimator in the situations when there exists some            considerable degree
+      of multicollinearity among the regressors. There are only few software packages            available
+      for estimation of the Liu regression coefficients but with limited methods to
+      estimate the Liu            biasing parameter without addressing testing procedures.
+      Our developed package liureg can be used            to estimate the Liu regression
+      coefficients with a range of different existing biasing parameters and            testing
+      of these coefficients with more than 15 Liu related statistics and different
+      graphical displays of            these statistics.'
+    acknowledged: '2017-03-14'
+    online: '2017-10-24'
+    CRANpkgs:
+    - lrmest
+    - ltsbase
+    - liureg
+    - lmridge
+    - MASS
+    - mctest
+    CTV_rev:
+    - Distributions
+    - Econometrics
+    - Environmetrics
+    - Multivariate
+    - NumericalMathematics
+    - Psychometrics
+    - Robust
+    - SocialSciences
+    landing: '2017'
+  - slug: RJ-2017-049
+    title: The welchADF Package for Robust Hypothesis Testing in Unbalanced Multivariate
+      Mixed Models with Heteroscedastic and Non-normal Data
+    bibtitle: |-
+      The welchADF Package for Robust Hypothesis Testing in
+                Unbalanced Multivariate Mixed Models with Heteroscedastic
+                and Non-normal Data
+    author: Pablo J. Villacorta
+    bibauthor: Pablo J. Villacorta
+    abstract: '  Abstract A new R package is presented for dealing with non-normality
+      and variance heterogeneity of            sample data when conducting hypothesis
+      tests of main effects and interactions in mixed models. The            proposal
+      departs from an existing SAS program which implements Johansen’s general formulation
+      of            Welch-James’s statistic with approximate degrees of freedom, which
+      makes it suitable for testing any            linear hypothesis concerning cell
+      means in univariate and multivariate mixed model designs when            the
+      data pose non-normality and non-homogeneous variance. Improved type I error
+      rate control is            obtained using bootstrapping for calculating an empirical
+      critical value, whereas robustness against            non-normality is achieved
+      through trimmed means and Winsorized variances. A wrapper function            eases
+      the application of the test in common situations, such as performing omnibus
+      tests on all effects            and interactions, pairwise contrasts, and tetrad
+      contrasts of two-way interactions. The package is            demonstrated in
+      several problems including unbalanced univariate and multivariate designs.'
+    acknowledged: '2017-04-24'
+    online: '2017-10-24'
+    CRANpkgs:
+    - ART
+    - WRS2
+    - robustbase
+    - robust
+    - robustlmm
+    - nlme
+    - lme4
+    - welchADF
+    - gamm4
+    - mgcv
+    CTV_rev:
+    - Robust
+    - Econometrics
+    - Environmetrics
+    - SocialSciences
+    - Bayesian
+    - OfficialStatistics
+    - Psychometrics
+    - SpatioTemporal
+    - ChemPhys
+    - Finance
+    - Multivariate
+    - Spatial
+    landing: '2017'
+  - slug: RJ-2017-050
+    title: Bayesian Regression Models for Interval-censored Data in R
+    bibtitle: Bayesian Regression Models for Interval-censored Data in R
+    author: Clifford Anderson-Bergman
+    bibauthor: Clifford Anderson-Bergman
+    abstract: '  Abstract The package icenReg provides classic survival regression
+      models for interval-censored data.            We present an update to the package
+      that extends the parametric models into the Bayesian framework.            Core
+      additions include functionality to define the regression model with the standard
+      regression            syntax while providing a custom prior function. Several
+      other utility functions are presented that            allow for simplified examination
+      of the posterior distribution.'
+    acknowledged: '2017-08-05'
+    online: '2017-10-24'
+    CRANpkgs:
+    - icenReg
+    - Rcpp
+    - RcppEigen
+    CTV_rev:
+    - NumericalMathematics
+    - HighPerformanceComputing
+    - Survival
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
