--- a/_config.yml
+++ b/_config.yml
@@ -733,6 +733,35 @@ issues:
     - HighPerformanceComputing
     - Survival
     landing: '2017'
+  - slug: RJ-2017-051
+    title: 'queueing: A Package For Analysis Of Queueing Networks and Models in R'
+    bibtitle: |-
+      queueing: A Package For Analysis Of Queueing Networks and
+                Models in R
+    author:
+    - Pedro Cañadilla Jiménez
+    - Yolanda Román Montoya
+    bibauthor: Pedro Cañadilla Jiménez and Yolanda Román Montoya
+    abstract: '  Abstract queueing is a package that solves and provides the main
+      performance measures for both            basic Markovian queueing models and
+      single and multiclass product-form queueing networks. It can            be used
+      both in education and for professional purposes. It provides an intuitive, straightforward            way
+      to build queueing models using S3 methods. The package solves Markovian models
+      of the form            M/M/c/K/M/FCFS, open and closed single class Jackson
+      networks, open and closed multiclass            networks and mixed networks.
+      Markovian models are used when both the customer inter-arrival time            and
+      the server processing time are exponentially distributed. Queueing network solvers
+      are useful for            modelling situations in which more than one station
+      must be visited.'
+    acknowledged: '2016-11-16'
+    online: '2017-10-24'
+    CRANpkgs:
+    - simmer
+    - queuecomputer
+    - rSymPy
+    - queueing
+    CTV_rev: NumericalMathematics
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
