--- a/_config.yml
+++ b/_config.yml
@@ -762,6 +762,76 @@ issues:
     - queueing
     CTV_rev: NumericalMathematics
     landing: '2017'
+  - slug: RJ-2017-052
+    title: 'BayesBD: An R Package for Bayesian Inference on Image Boundaries'
+    bibtitle: |-
+      BayesBD: An R Package for Bayesian Inference on Image
+                Boundaries
+    author:
+    - Nicholas Syring
+    - Meng Li
+    bibauthor: Nicholas Syring and Meng Li
+    abstract: '  Abstract                 We present the BayesBD package providing
+      Bayesian inference for boundaries of noisy images.            The BayesBD package
+      implements flexible Gaussian process priors indexed by the circle to recover            the
+      boundary in a binary or Gaussian noised image. The boundary recovered by BayesBD
+      has            the practical advantages of guaranteed geometric restrictions
+      and convenient joint inferences under            certain assumptions, in addition
+      to its desirable theoretical property of achieving (nearly) minimax            optimal
+      rate in a way that is adaptive to the unknown smoothness. The core sampling
+      tasks for            our model have linear complexity, and is implemented in
+      c++ for computational efficiency using            packages Rcpp and RcppArmadillo.
+      Users can access the full functionality of the package in both            Rgui
+      and the corresponding shiny application. Additionally, the package includes
+      numerous utility            functions to aid users in data preparation and analysis
+      of results. We compare BayesBD with selected            existing packages using
+      both simulations and real data applications, and demonstrate the excellent            performance
+      and flexibility of BayesBD even when the observation contains complicated structural            information
+      that may violate its assumptions.'
+    acknowledged: '2016-12-23'
+    online: '2017-10-25'
+    CRANpkgs:
+    - BayesBD
+    - RcppArmadillo
+    - shiny
+    CTV_rev:
+    - NumericalMathematics
+    - WebTechnologies
+    landing: '2017'
+  - slug: RJ-2017-053
+    title: Simulating Noisy, Nonparametric, and Multivariate Discrete Patterns
+    bibtitle: |-
+      Simulating Noisy, Nonparametric, and Multivariate Discrete
+                Patterns
+    author:
+    - Ruby Sharma
+    - Sajal Kumar
+    - Hua Zhong
+    - Mingzhou Song
+    bibauthor: Ruby Sharma and Sajal Kumar and Hua Zhong and Mingzhou Song
+    abstract: '  Abstract Requiring no analytical forms, nonparametric discrete patterns
+      are flexible in representing            complex relationships among random variables.
+      This makes them increasingly useful for data-driven            applications.
+      However, there appears to be no software tools for simulating nonparametric
+      discrete            patterns, which prevents objective evaluation of statistical
+      methods that discover discrete relationships            from data. We present
+      a simulator to generate nonparametric discrete functions as contingency tables.            User
+      can request strictly many-to-one functional patterns. The simulator can also
+      produce contingency            tables representing dependent non-functional
+      and independent relationships. An option is provided            to apply random
+      noise to contingency tables. We demonstrate the utility of the simulator by
+      showing            the advantage of the FunChisq test over Pearson’s chi-square
+      test in detecting functional patterns.            This simulator, implemented
+      as function simulate_tables in the R package FunChisq (version 2.4.0            or
+      greater), offers an important means to evaluate the performance of nonparametric
+      statistical pattern            discovery methods.'
+    acknowledged: '2017-05-09'
+    online: '2017-10-25'
+    CRANpkgs:
+    - stats
+    - rTableICC
+    - FunChisq
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
