--- a/_config.yml
+++ b/_config.yml
@@ -832,6 +832,35 @@ issues:
     - rTableICC
     - FunChisq
     landing: '2017'
+  - slug: RJ-2017-054
+    title: 'ider: Intrinsic Dimension Estimation with R'
+    bibtitle: 'ider: Intrinsic Dimension Estimation with R'
+    author: Hideitsu Hino
+    bibauthor: Hideitsu Hino
+    abstract: '  Abstract In many data analyses, the dimensionality of the observed
+      data is high while its intrinsic            dimension remains quite low. Estimating
+      the intrinsic dimension of an observed dataset is an essential            preliminary
+      step for dimensionality reduction, manifold learning, and visualization. This
+      paper            introduces an R package, named ider, that implements eight
+      intrinsic dimension estimation methods,            including a recently proposed
+      method based on second-order expansion of probability mass function            and
+      generalized linear model. The usage of each function in the package is explained
+      with datasets            generated using a function that is also included in
+      the package.'
+    acknowledged: '2017-04-27'
+    online: '2017-10-31'
+    CRANpkgs:
+    - ider
+    - fractal
+    - nonlinearTseries
+    - tseriesChaos
+    - Rcpp
+    CTV_rev:
+    - TimeSeries
+    - Finance
+    - HighPerformanceComputing
+    - NumericalMathematics
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
