--- a/_config.yml
+++ b/_config.yml
@@ -848,7 +848,7 @@ issues:
       with datasets            generated using a function that is also included in
       the package.'
     acknowledged: '2017-04-27'
-    online: '2017-10-31'
+    online: '2017-11-01'
     CRANpkgs:
     - ider
     - fractal
@@ -860,6 +860,43 @@ issues:
     - Finance
     - HighPerformanceComputing
     - NumericalMathematics
+    landing: '2017'
+  - slug: RJ-2017-055
+    title: 'mle.tools: An R Package for Maximum Likelihood Bias Correction'
+    bibtitle: |-
+      mle.tools: An R Package for Maximum Likelihood Bias
+                Correction
+    author:
+    - Josmar Mazucheli
+    - André Felipe B. Menezes
+    - Saralees Nadarajah
+    bibauthor: |-
+      Josmar Mazucheli and André Felipe B. Menezes and Saralees
+                Nadarajah
+    abstract: '  Abstract Recently, Mazucheli (2017) uploaded the package mle.tools
+      to CRAN. It can be used for            bias corrections of maximum likelihood
+      estimates through the methodology proposed by Cox and            Snell (1968).
+      The main function of the package, coxsnell.bc, computes the bias corrected maximum            likelihood
+      estimates. Although in general, the bias corrected estimators may be expected
+      to have            better sampling properties than the uncorrected estimators,
+      analytical expressions from the formula            proposed by Cox and Snell
+      (1968) are either tedious or impossible to obtain. The purpose of this paper            is
+      twofolded: to introduce the mle.tools package, especially the coxsnell.bc function;
+      secondly, to            compare, for thirty one continuous distributions, the
+      bias estimates from the coxsnell.bc function            and the bias estimates
+      from analytical expressions available in the literature. We also compare, for            five
+      distributions, the observed and expected Fisher information. Our numerical experiments
+      show            that the functions are efficient to estimate the biases by the
+      Cox-Snell formula and for calculating the            observed and expected Fisher
+      information.'
+    acknowledged: '2017-04-04'
+    online: '2017-11-01'
+    CRANpkgs:
+    - mle.tools
+    - fitdistrplus
+    CTV_rev:
+    - Distributions
+    - Survival
     landing: '2017'
 - issue: 2009-1
   year: 2009
