--- a/_config.yml
+++ b/_config.yml
@@ -832,6 +832,43 @@ issues:
     - rTableICC
     - FunChisq
     landing: '2017'
+  - slug: RJ-2017-054
+    title: 'Splitting It Up: The spduration Split-Population Duration Regression Package
+      for Time-varying Covariates'
+    bibtitle: |-
+      Splitting It Up: The spduration Split-Population Duration
+                Regression Package for Time-varying Covariates
+    author:
+    - Andreas Beger
+    - Daniel W. Hill
+    - Jr.
+    - Nils. W. Metternich
+    - Shahryar Minhas
+    - Michael D. Ward
+    bibauthor: |-
+      Andreas Beger and Daniel W. Hill and Jr. and Nils. W.
+                Metternich and Shahryar Minhas and Michael D. Ward
+    abstract: '  Abstract We present an implementation of split-population duration
+      regression in the spduration            (Beger et al., 2017) package for R that
+      allows for time-varying covariates. The statistical model accounts            for
+      units that are immune to a certain outcome and not part of the duration process
+      the researcher is            primarily interested in. We provide insights that
+      if immune units exist, we can significantly increase            the predictive
+      performance compared to standard duration models. The package includes estimation            and
+      several post-estimation methods for split-population Weibull and Loglogistic
+      models. We provide            an empirical application to data on military coups.'
+    acknowledged: '2017-07-12'
+    online: '2017-11-05'
+    CRANpkgs:
+    - survival
+    - spduration
+    - smcure
+    CTV_rev:
+    - Survival
+    - ClinicalTrials
+    - Econometrics
+    - SocialSciences
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
