--- a/_config.yml
+++ b/_config.yml
@@ -958,6 +958,42 @@ issues:
     - Econometrics
     - SocialSciences
     landing: '2017'
+  - slug: RJ-2017-057
+    title: Allele Imputation and Haplotype Determination from Databases Composed of
+      Nuclear Families
+    bibtitle: |-
+      Allele Imputation and Haplotype Determination from Databases
+                Composed of Nuclear Families
+    author:
+    - Nathan Medina-Rodríguez
+    - Ángelo Santana
+    bibauthor: Nathan Medina-Rodríguez and Ángelo Santana
+    abstract: '  Abstract alleHap is a package designed for imputing genetic missing
+      data and reconstruct non           recombinant haplotypes from pedigree databases
+      in a deterministic way. When genotypes of related            individuals are
+      available in a number of linked genetic markers, the program starts by identifying            haplotypes
+      compatible with the observed genotypes in those markers without missing values.
+      If            haplotypes are identified in parents or offspring, missing alleles
+      can be imputed in subjects containing            missing values. Several scenarios
+      are analyzed: family completely genotyped, children partially            genotyped
+      and parents completely genotyped, children fully genotyped and parents containing            entirely
+      or partially missing genotypes, and founders and their offspring both only partially
+      genotyped.            alleHap also has a function to simulate pedigrees including
+      all these scenarios. This article describes            in detail how our package
+      works for the desired applications, including illustrated explanations and            easily
+      reproducible examples.'
+    acknowledged: '2016-08-25'
+    online: '2017-11-16'
+    CRANpkgs:
+    - haplo.ccs
+    - haplo.stats
+    - hsphase
+    - linkim
+    - rrBLUP
+    - synbreed
+    - alleHap
+    CTV_rev: Genetics
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
