--- a/_config.yml
+++ b/_config.yml
@@ -994,6 +994,47 @@ issues:
     - alleHap
     CTV_rev: Genetics
     landing: '2017'
+  - slug: RJ-2017-058
+    title: 'rentrez: An R package for the NCBI eUtils API'
+    bibtitle: 'rentrez: An R package for the NCBI eUtils API'
+    author: David J. Winter
+    bibauthor: David J. Winter
+    abstract: '  Abstract The USA National Center for Biotechnology Information (NCBI)
+      is one of the world’s most            important sources of biological information.
+      NCBI databases like PubMed and GenBank contain mil           lions of records
+      describing bibliographic, genetic, genomic, and medical data. Here I present
+      rentrez,            a package which provides an R interface to 50 NCBI databases.
+      The package is well-documented,            contains an extensive suite of unit
+      tests and has an active user base. The programmatic interface to the            NCBI
+      provided by rentrez allows researchers to query databases and download or import
+      particular            records into R sessions for subsequent analysis. The complete
+      nature of the package, its extensive            test-suite and the fact the
+      package implements the NCBI’s usage policies all make rentrez a powerful            aid
+      to developers of new packages that perform more specific tasks.'
+    acknowledged: '2017-09-01'
+    online: '2017-11-16'
+    CRANpkgs:
+    - ape
+    - RISmed
+    - pubmed.mineR
+    - rentrez
+    - reutils
+    - rotl
+    - fulltext
+    - treemap
+    BIOpkgs:
+    - genomes
+    - RMassBank
+    - MeSHSim
+    - genbankr
+    CTV_rev:
+    - Phylogenetics
+    - Environmetrics
+    - Genetics
+    - Graphics
+    - OfficialStatistics
+    - WebTechnologies
+    landing: '2017'
 - issue: 2009-1
   year: 2009
   volume: 1
