--- a/_config.yml
+++ b/_config.yml
@@ -1035,6 +1035,39 @@ issues:
     - OfficialStatistics
     - WebTechnologies
     landing: '2017'
+  - slug: RJ-2017-059
+    title: Simulating Probabilistic Long-Term Effects in Models with Temporal Dependence
+    bibtitle: |-
+      Simulating Probabilistic Long-Term Effects in Models with
+                Temporal Dependence
+    author:
+    - Christopher Gandrud
+    - Laron K. Williams
+    bibauthor: Christopher Gandrud and Laron K. Williams
+    abstract: '  Abstract The R package pltesim calculates and depicts probabilistic
+      long-term effects in binary models            with temporal dependence variables.
+      The package performs two tasks. First, it calculates the change in            the
+      probability of the event occurring given a change in a theoretical variable.
+      Second, it calculates the            rolling difference in the future probability
+      of the event for two scenarios: one where the event occurred            at a
+      given time and one where the event does not occur. The package is consistent
+      with the recent            movement to depict meaningful and easy-to-interpret
+      quantities of interest with the requisite measures            of uncertainty.
+      It is the first to make it easy for researchers to interpret shortand long-term
+      effects of            explanatory variables in binary autoregressive models,
+      which can have important implications for the            correct interpretation
+      of these models.'
+    acknowledged: '2017-06-29'
+    online: '2017-11-22'
+    CRANpkgs:
+    - pltesim
+    - ggplot2
+    - DAMisc
+    CTV_rev:
+    - Graphics
+    - Phylogenetics
+    landing: '2017'
+    suppl: 1.6 Kb
 - issue: 2009-1
   year: 2009
   volume: 1
