--- a/_config.yml
+++ b/_config.yml
@@ -1068,6 +1068,138 @@ issues:
     - Phylogenetics
     landing: '2017'
     suppl: 1.6 Kb
+  - slug: RJ-2017-060
+    title: 'ManlyMix: An R Package for Manly Mixture Modeling'
+    bibtitle: 'ManlyMix: An R Package for Manly Mixture Modeling'
+    author:
+    - Xuwen Zhu
+    - Volodymyr Melnykov
+    bibauthor: Xuwen Zhu and Volodymyr Melnykov
+    abstract: '  Abstract Model-based clustering is a popular technique for grouping
+      objects based on a finite mixture            model. It has countless applications
+      in different fields of study. The R package ManlyMix implements            the
+      Manly mixture model that allows modeling skewness within data groups and performs
+      cluster            analysis. ManlyMix is a powerful diagnostics tool that is
+      capable of conducting investigation con           cerning the normality of variables
+      upon fitting of a Manly forward or backward model. Theoretical            foundations
+      as well as description of functions are provided. All features of the package
+      are illus           trated with examples in great detail. The analysis of real-life
+      datasets demonstrates the flexibility and            usefulness of the package.'
+    acknowledged: '2017-02-17'
+    online: '2017-11-22'
+    CRANpkgs:
+    - flowClust
+    - mixsmsn
+    - EMMIXskew
+    - EMMIXuskew
+    - ManlyMix
+    CTV_rev: Cluster
+    landing: '2017'
+  - slug: RJ-2017-061
+    title: 'Partial Rank Data with the hyper2 Package: Likelihood Functions for Generalized
+      Bradley-Terry Models'
+    bibtitle: |-
+      Partial Rank Data with the hyper2 Package: Likelihood
+                Functions for Generalized Bradley-Terry Models
+    author: Robin K. S. Hankin
+    bibauthor: Robin K. S. Hankin
+    abstract: '  Abstract Here I present the hyper2 package for generalized Bradley-Terry
+      models and give examples            from two competitive situations: single
+      scull rowing, and the competitive cooking game show Mas           terChef Australia.
+      A number of natural statistical hypotheses may be tested straightforwardly using            the
+      software.'
+    acknowledged: '2017-07-07'
+    online: '2017-11-22'
+    CRANpkgs:
+    - hyper2
+    - aylmer
+    CTV_rev: Distributions
+    landing: '2017'
+    suppl: 1 Kb
+  - slug: RJ-2017-062
+    title: 'riskRegression: Predicting the Risk of an Event using Cox Regression Models'
+    bibtitle: |-
+      riskRegression: Predicting the Risk of an Event using Cox
+                Regression Models
+    author:
+    - Brice Ozenne
+    - Anne Lyngholm Sørensen
+    - Thomas Scheike
+    - Christian Torp-Pedersen
+    - Thomas            Alexander Gerds
+    bibauthor: |-
+      Brice Ozenne and Anne Lyngholm Sørensen and Thomas Scheike
+                and Christian Torp-Pedersen and Thomas Alexander Gerds
+    abstract: '  Abstract In the presence of competing risks a prediction of the time-dynamic
+      absolute risk of an            event can be based on cause-specific Cox regression
+      models for the event and the competing risks            (Benichou and Gail,
+      1990). We present computationally fast and memory optimized cpp functions            with
+      R interface for predicting the covariate specific absolute risks, their confidence
+      intervals, and their            confidence bands based on right censored time
+      to event data. We provide explicit formula for our            implementation
+      of the estimator of the (stratified) baseline hazard function in the presence
+      of tied event            times. As a by-product we obtain fast access to the
+      baseline hazards (compared to survival::basehaz)            and predictions
+      of survival probabilities, their confidence intervals and confidence bands.
+      Confidence            intervals and confidence bands are based on point-wise
+      asymptotic expansions of the corresponding            statistical functionals.
+      The software presented here is implemented in the riskRegression package            (version
+      2017.10.13 or higher).'
+    acknowledged: '2017-07-07'
+    online: '2017-11-22'
+    CRANpkgs:
+    - survival
+    - rms
+    - riskRegression
+    - mstate
+    - rbenchmark
+    - profvis
+    - mets
+    CTV_rev:
+    - Survival
+    - Econometrics
+    - SocialSciences
+    - ClinicalTrials
+    - ReproducibleResearch
+    landing: '2017'
+    suppl: 1.7 Kb
+  - slug: RJ-2017-063
+    title: 'openEBGM: An R Implementation of the Gamma-Poisson Shrinker Data Mining
+      Model'
+    bibtitle: |-
+      openEBGM: An R Implementation of the Gamma-Poisson Shrinker
+                Data Mining Model
+    author:
+    - Travis Canida
+    - John Ihrie
+    bibauthor: Travis Canida and John Ihrie
+    abstract: '  Abstract We introduce the R package openEBGM, an implementation of
+      the Gamma-Poisson Shrinker            (GPS) model for identifying unexpected
+      counts in large contingency tables using an empirical Bayes            approach.
+      The Empirical Bayes Geometric Mean (EBGM) and quantile scores are obtained from            the
+      GPS model estimates. openEBGM provides for the evaluation of counts using a
+      number of            different methods, including the model-based disproportionality
+      scores, the relative reporting ratio            (RR), and the proportional reporting
+      ratio (PRR). Data squashing for computational efficiency and            stratification
+      for confounding variable adjustment are included. Application to adverse event
+      detection            is discussed.'
+    acknowledged: '2017-08-11'
+    online: '2017-11-22'
+    CRANpkgs:
+    - openEBGM
+    - PhViD
+    - mederrRank
+    - tidyr
+    - ggplot2
+    - data.table
+    CTV_rev:
+    - Bayesian
+    - Finance
+    - Graphics
+    - HighPerformanceComputing
+    - Phylogenetics
+    landing: '2017'
+    suppl: 5.1 Kb
 - issue: 2009-1
   year: 2009
   volume: 1
