add in supplementaries

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ issues:
       as well as global parameters (e.g. the mean of the spatial random function for            hydraulic
       conductivity).'
     acknowledged: '2016-08-25'
-    online: '2017-06-28'
+    online: '2017-11-22'
     CRANpkgs:
     - gstat
     - spBayes
@@ -53,6 +53,7 @@ issues:
     - SocialSciences
     - TimeSeries
     landing: '2017'
+    suppl: 489 bytes
   - slug: RJ-2017-035
     title: A Tidy Data Model for Natural Language Processing using cleanNLP
     bibtitle: |-
@@ -208,7 +209,7 @@ issues:
       by Standard and Poor’s discrete-time corporate credit rating            transition
       data.'
     acknowledged: '2016-12-12'
-    online: '2017-07-28'
+    online: '2017-11-22'
     CRANpkgs:
     - msm
     - ctmcd
@@ -219,6 +220,7 @@ issues:
     - gR
     - Survival
     landing: '2017'
+    suppl: 1.6 Kb
   - slug: RJ-2017-039
     title: 'anomalyDetection: Implementation of Augmented Network Log Anomaly Detection
       Procedures'
@@ -255,13 +257,14 @@ issues:
       simplified approach to break up network events into time-segment blocks            and
       identify periods associated with suspected anomalies for further evaluation.'
     acknowledged: '2017-05-05'
-    online: '2017-08-04'
+    online: '2017-11-22'
     CRANpkgs:
     - anomalyDetection
     - magrittr
     - tidyverse
     CTV_rev: WebTechnologies
     landing: '2017'
+    suppl: 909 bytes
   - slug: RJ-2017-040
     title: 'dGAselID: An R Package for Selecting a Variable Number of Features in
       High Dimensional Data'
@@ -377,7 +380,7 @@ issues:
       lattice and            grid. We give a brief description of the package and
       illustrate some important functionalities to build            elegant graphs.'
     acknowledged: '2017-02-17'
-    online: '2017-10-07'
+    online: '2017-11-22'
     CRANpkgs:
     - vegan
     - MASS
@@ -404,6 +407,7 @@ issues:
     - SocialSciences
     - SpatioTemporal
     landing: '2017'
+    suppl: 3.4 Kb
   - slug: RJ-2017-043
     title: 'LeArEst: Length and Area Estimation from Data Measured with Additive Error'
     bibtitle: |-
@@ -431,7 +435,7 @@ issues:
       its            usage are provided.            Availability: LeArEst is available
       on CRAN.'
     acknowledged: '2017-07-07'
-    online: '2017-10-07'
+    online: '2017-11-22'
     CRANpkgs:
     - LeArEst
     - decon
@@ -444,6 +448,7 @@ issues:
     - WebTechnologies
     - NumericalMathematics
     landing: '2017'
+    suppl: 570 bytes
   - slug: RJ-2017-044
     title: 'fourierin: An R package to compute Fourier integrals'
     bibtitle: 'fourierin: An R package to compute Fourier integrals'
@@ -508,7 +513,7 @@ issues:
       as they are needed and can be seen as a            programming infrastructure
       for further algorithm development.'
     acknowledged: '2017-04-07'
-    online: '2017-10-12'
+    online: '2017-11-22'
     CRANpkgs:
     - afmToolkit
     - devtools
@@ -523,6 +528,7 @@ issues:
     - Optimization
     - Phylogenetics
     landing: '2017'
+    suppl: 1.5 Kb
   - slug: RJ-2017-046
     title: Visualization of Regression Models Using visreg
     bibtitle: Visualization of Regression Models Using visreg
@@ -641,7 +647,7 @@ issues:
       of these coefficients with more than 15 Liu related statistics and different
       graphical displays of            these statistics.'
     acknowledged: '2017-03-14'
-    online: '2017-10-24'
+    online: '2017-11-22'
     CRANpkgs:
     - lrmest
     - ltsbase
@@ -659,6 +665,7 @@ issues:
     - Robust
     - SocialSciences
     landing: '2017'
+    suppl: 689 bytes
   - slug: RJ-2017-049
     title: The welchADF Package for Robust Hypothesis Testing in Unbalanced Multivariate
       Mixed Models with Heteroscedastic and Non-normal Data
@@ -684,7 +691,7 @@ issues:
       contrasts of two-way interactions. The package is            demonstrated in
       several problems including unbalanced univariate and multivariate designs.'
     acknowledged: '2017-04-24'
-    online: '2017-10-24'
+    online: '2017-11-22'
     CRANpkgs:
     - ART
     - WRS2
@@ -710,6 +717,7 @@ issues:
     - Multivariate
     - Spatial
     landing: '2017'
+    suppl: 1.2 Kb
   - slug: RJ-2017-050
     title: Bayesian Regression Models for Interval-censored Data in R
     bibtitle: Bayesian Regression Models for Interval-censored Data in R
@@ -723,7 +731,7 @@ issues:
       other utility functions are presented that            allow for simplified examination
       of the posterior distribution.'
     acknowledged: '2017-08-05'
-    online: '2017-10-24'
+    online: '2017-11-22'
     CRANpkgs:
     - icenReg
     - Rcpp
@@ -733,6 +741,7 @@ issues:
     - HighPerformanceComputing
     - Survival
     landing: '2017'
+    suppl: 1.2 Kb
   - slug: RJ-2017-051
     title: 'queueing: A Package For Analysis Of Queueing Networks and Models in R'
     bibtitle: |-
@@ -826,12 +835,13 @@ issues:
       greater), offers an important means to evaluate the performance of nonparametric
       statistical pattern            discovery methods.'
     acknowledged: '2017-05-09'
-    online: '2017-10-25'
+    online: '2017-11-22'
     CRANpkgs:
     - stats
     - rTableICC
     - FunChisq
     landing: '2017'
+    suppl: 3.4 Kb
   - slug: RJ-2017-054
     title: 'ider: Intrinsic Dimension Estimation with R'
     bibtitle: 'ider: Intrinsic Dimension Estimation with R'
@@ -848,7 +858,7 @@ issues:
       with datasets            generated using a function that is also included in
       the package.'
     acknowledged: '2017-04-27'
-    online: '2017-11-05'
+    online: '2017-11-22'
     CRANpkgs:
     - ider
     - ider
@@ -884,6 +894,7 @@ issues:
     - HighPerformanceComputing
     - NumericalMathematics
     landing: '2017'
+    suppl: 950 bytes
   - slug: RJ-2017-055
     title: 'mle.tools: An R Package for Maximum Likelihood Bias Correction'
     bibtitle: |-
@@ -913,7 +924,7 @@ issues:
       Cox-Snell formula and for calculating the            observed and expected Fisher
       information.'
     acknowledged: '2017-04-04'
-    online: '2017-11-05'
+    online: '2017-11-22'
     CRANpkgs:
     - mle.tools
     - fitdistrplus
@@ -921,6 +932,7 @@ issues:
     - Distributions
     - Survival
     landing: '2017'
+    suppl: 4.5 Kb
   - slug: RJ-2017-056
     title: 'Splitting It Up: The spduration Split-Population Duration Regression Package
       for Time-varying Covariates'
@@ -1012,7 +1024,7 @@ issues:
       package implements the NCBI’s usage policies all make rentrez a powerful            aid
       to developers of new packages that perform more specific tasks.'
     acknowledged: '2017-09-01'
-    online: '2017-11-16'
+    online: '2017-11-22'
     CRANpkgs:
     - ape
     - RISmed
@@ -1035,6 +1047,7 @@ issues:
     - OfficialStatistics
     - WebTechnologies
     landing: '2017'
+    suppl: 11.2 Kb
   - slug: RJ-2017-059
     title: Simulating Probabilistic Long-Term Effects in Models with Temporal Dependence
     bibtitle: |-
